tests/negative/typecheck/sliceof_non_array.orng
fn main() -> Int {
    let x = 4
    let y: []Int = []x
    0
}